--- a/composer.json
+++ b/composer.json
@@ -10,6 +10,9 @@
     ],
     "minimum-stability": "dev",
     "require": {},
+    "require-dev": {
+        "phpunit/phpunit": "~5.7"
+    },
     "autoload": {
         "psr-4": {
             "Mixthe\\Hasher\\":"src/"
