--- a/.travis.yml
+++ b/.travis.yml
@@ -6,3 +6,4 @@ php:
 before_script:
   - composer self-update
   - composer install --prefer-source --no-interaction --dev
+  - ./vendor/bin/phpunit
