--- a/composer.json
+++ b/composer.json
@@ -11,7 +11,7 @@
     "minimum-stability": "dev",
     "require": {},
     "require-dev": {
-        "phpunit/phpunit": "~6.0"
+        "phpunit/phpunit": "5.5.*"
     },
     "autoload": {
         "psr-4": {
